# WeasyPrint

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .travis.yml  AUTHORS  CHANGES  CNAME  CODE_OF_CONDUCT.rst  COPYRIGHT  Gemfile  IMPLEMENTATION  LICENSE  MANIFEST.in  Makefile  NEWS.rst  README  README.rst  Vagrantfile  _config.yml  about.html  community.md  configuration  configuration.yaml  docs.md  donate.html  gorun_settings.py  index.html  index.md  jquery.smoothState.min.js  news.html  pyproject.toml  pytest.ini  roadmap.md  samples.html  setup.cfg  setup.py  start.html  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  doconfly.yml  exe.yml  linux-exe.yml  m-series-mac-executable.yml  macex.yml  release.yml  test_pdfa.yml  test_pdfua.yml  test_samples.yml  tests.yml  wheel-macos.yml  wheel-windows.yml  win-wheel.yml
_layouts/: default.html  page.html
_posts/: 2011-11-02-weasyprint-0.1-is-released.md  2011-11-25-tables-in-weasyprint.md  2011-12-13-weasyprint-0.3-svg-images-and-generated-content.md  2012-03-26-weasyprint-0.4-to-0.7-bsd-license.md  2012-05-07-weasyprint-0.8-tinycss-and-cssselect.md  2012-07-04-weasyprint-0.11-floats-acid2-and-unprefixing.md  2012-07-19-weasyprint-0.12-border-collapse-and-flask-weasyprint.md  2012-07-23-weasyprint-0.13-pygtk-compatibility.md  2012-10-10-weasyprint-0.15-more-api-more-docs-more-fixes.md  2012-12-13-weasyprint-0.16-pdf-zoom-and-bug-fixes.md  2013-12-14-weasyprint-0.20-border-radius.md  2016-01-29-weasyprint-0.26.md  2016-04-08-weasyprint-0.27.md  2016-05-16-weasyprint-0.28.md  2016-06-17-weasyprint-0.29.md  2016-07-18-weasyprint-0.30.md  2016-08-28-weasyprint-0.31.md  2016-11-18-weasyprint-0.32.md  2016-11-28-weasyprint-0.33.md  2017-02-25-weasyprint-0.36.md  2017-06-15-weasyprint-0.37.md  2017-06-16-weasyprint-0.38.md  2017-06-25-weasyprint-0.39.md  2017-08-17-weasyprint-0.40.md  2017-10-05-weasyprint-0.41.md  2017-12-26-weasyprint-0.42.md  2018-02-01-weasyprint-0.42.1.md  2018-02-04-weasyprint-0.42.2.md  2018-03-27-weasyprint-0.42.3.md  2018-10-16-weasyprint-43rc1.md  2018-11-02-weasyprint-43rc2.md  2018-11-09-weasyprint-43.md  2018-12-29-weasyprint-44.md  2019-02-20-weasyprint-45.md  2019-03-20-weasyprint-46.md  2019-04-12-weasyprint-47.md  2019-07-08-weasyprint-48.md  2019-09-11-weasyprint-49.md  2019-09-19-weasyprint-50.md  2019-12-23-weasyprint-51.md  (+8 more)
_sass/: _common.sass  _footer.sass  _keyframes.sass  _menu.sass  _transitions.sass  _utils.sass  about.sass  donate.sass  index.sass  news.sass  samples.sass  start.sass
about/: index.html
css/: main.css  main.sass  main.scss  print.css  print.sass  screen.css
docker/: Dockerfile  README  weasyprint.bat
docs/: api.rst  api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  features.rst  first_steps.rst  going_further.rst  hacking.rst  index.rst  install.rst  manpage.rst  support.rst  tips-tricks.rst  tutorial.rst  using.rst
docs/_static/: custom.css
docs/_themes/: sphinx_rtd_theme
documentation/md/: 00_index.md  01_overview.md  02_api_reference.md  03_css_support.md  04_architecture.md  05_failure_diagnostics.md  06_pdf_module.md  07_css_internals.md  08_documentation_guide.md
donate/: index.html
fireweasy/: __init__.py  __main__.py  serialize.py
fireweasy/sample/: sample.html
fireweasy/static/: draw.coffee  style.css
fireweasy/templates/: home.html
news/: index.html
news/simon/: 2011-11-02@15:00:00.rst  2011-11-25@18:00:00.rst  2011-12-13@11:00:00.rst  2012-03-26@12:00:00.rst  2012-05-07@19:00:00.rst  2012-07-04@17:00:00.rst  2012-07-19@15:00:00.rst  2012-07-23@20:00:00.rst
packaging/: build_wheel.py  requirements.txt  windows_distributor_init.py
pages/: community.rst  contribute.rst  download.rst  features.rst  hacking.rst  home.rst  install.rst  using.rst
samples/: CSS21-print.css
samples/invoice/: invoice.css  invoice.html  invoice.sass
samples/report/: report.css  report.css.map  report.html  report.html.txt  report.sass
samples/ticket/: ticket.css  ticket.css.map  ticket.html  ticket.sass
start/: index.html
static/css/: style.css
static/samples/: CSS21-print.css  gen.sh
tests/: __init__.py  conftest.py  fuzz_weasyprint.py  test_acid2.py  test_api.py  test_boxes.py  test_counters.py  test_css.py  test_css_descriptors.py  test_css_validation.py  test_float.py  test_fonts.py  test_html.py  test_html_utils.py  test_pdf.py  test_presentational_hints.py  test_stacking.py  test_target.py  test_text.py  test_unicode.py  test_url.py  test_url_fetcher.py  test_variables.py  testing_utils.py
tests/css/: __init__.py  test_common.py  test_counters.py  test_descriptors.py  test_errors.py  test_expanders.py  test_fonts.py  test_layers.py  test_math.py  test_nesting.py  test_pages.py  test_shorthands.py  test_target.py  test_ua.py  test_validation.py  test_variables.py
tests/draw/: __init__.py  test_absolute.py  test_background.py  test_before_after.py  test_box.py  test_cmyk_color_profiles.py  test_column.py  test_current_color.py  test_float.py  test_footnote.py  test_footnote_column.py  test_footnotes.py  test_gradient.py  test_image.py  test_leader.py  test_list.py  test_opacity.py  test_overflow.py  test_page.py  test_shadow.py  test_table.py  test_text.py  test_transform.py  test_visibility.py  test_whitespace.py
tests/layout/: __init__.py  test_block.py  test_column.py  test_flex.py  test_float.py  test_footnotes.py  test_grid.py  test_image.py  test_inline.py  test_inline_block.py  (+8 more)
weasy/: __init__.py  boxes.py  css.py  document.py  draw.py  drawing.py  html.py  html4_default.css  images.py  layout.py  properties.py  replaced.py  tests.py  text.py  utils.py  version.py
weasyprint/: VERSION  __init__.py  __main__.py  _distributor_init.py  anchors.py  backends.py  browser.py  calc.py  compat.py  document.py  draw.py  fonts.py  forms.py  html.py  html_utils.py  images.py  links.py  logger.py  logging.py  matrix.py  navigator.py  pdf.py  pdf2.py  png.py  rotate_fn.py  stacking.py  stream.py  text.py  urls.py  utils.py
(+307 files in other folders)
