[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'weasyprint'
dist-name = 'WeasyPrint'
author = 'Simon Sapin'
author-email = 'simon.sapin@exyr.org'
maintainer = 'CourtBouillon'
maintainer-email = 'contact@courtbouillon.org'
home-page = 'https://www.courtbouillon.org/weasyprint'
requires = [
  'pydyf >=0.0.1',
  'cffi >=0.6',
  'html5lib >=1.0.1',
  'tinycss2 >=1.0.0',
  'cssselect2 >=0.1',
  'Pyphen >=0.9.1',
  'Pillow >=4.0.0',
  # We could use fonttools[woff], but see
  # https://github.com/fonttools/fonttools/issues/2188
  'fonttools >=4.0.0',
  'brotli >=1.0.1; platform_python_implementation == "CPython"',
  'brotlicffi >=0.8.0; platform_python_implementation != "CPython"',
]
requires-python = '>=3.6'
keywords = 'html css pdf converter'
description-file = 'README.rst'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP',
  'Topic :: Text Processing :: Markup :: HTML',
  'Topic :: Multimedia :: Graphics :: Graphics Conversion',
  'Topic :: Printing',
]

[tool.flit.metadata.requires-extra]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'pytest-cov', 'pytest-flake8', 'pytest-isort', 'coverage[toml]']

[tool.flit.scripts]
weasyprint = 'weasyprint.__main__:main'

[tool.flit.metadata.urls]
Documentation = 'https://doc.courtbouillon.org/weasyprint/'
Code = 'https://github.com/Kozea/WeasyPrint'
Issues = 'https://github.com/Kozea/WeasyPrint/issues'
Donation = 'https://opencollective.com/courtbouillon'

[tool.flit.sdist]
exclude = ['.*', 'tests/results']

[tool.pytest.ini_options]
addopts = '--isort --flake8 --cov --no-cov-on-fail'

[tool.coverage.run]
branch = true
include = ['tests/*', 'weasyprint/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
