[metadata]
name = WeasyPrint
url = https://weasyprint.org/
version = file: weasyprint/VERSION
license = BSD
license_file = LICENSE
description = The Gorgeous Document Factory
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Sapin
author_email = community@kozea.fr
platforms =
  Linux
  macOS
  Windows
keywords =
  html
  css
  pdf
  converter
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Internet :: WWW/HTTP
  Topic :: Text Processing :: Markup :: HTML
  Topic :: Multimedia :: Graphics :: Graphics Conversion
  Topic :: Printing
project_urls =
  Documentation = https://weasyprint.readthedocs.io/
  Code = https://github.com/Kozea/WeasyPrint/
  Issue tracker = https://github.com/Kozea/WeasyPrint/issues
  Donation = https://www.patreon.com/kozea

[options]
packages = find:
zip_safe = false
setup_requires = pytest-runner
install_requires =
  setuptools>=39.2.0
  cffi>=0.6
  html5lib>=0.999999999
  cairocffi>=0.9.0
  tinycss2>=0.5
  cssselect2>=0.1
  CairoSVG>=1.0.20
  Pyphen>=0.8
tests_require =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort
python_requires = >= 3.5

[options.entry_points]
console-scripts = weasyprint = weasyprint.__main__:main

[options.package_data]
weasyprint = VERSION
weasyprint.tests = resources/*.*, resources/*/*
weasyprint.css = *.css

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort

[bdist_wheel]
python-tag = py3

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --isort
norecursedirs = build dist .cache .eggs .git

[coverage:run]
branch = True
include = weasyprint/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
omit =
    .*

[isort]
default_section = THIRDPARTY
multi_line_output = 4
